037_array_subseq/grade.txt
Grading at 09/17/2018:19:27:30.549932
For commit ID 2a9035e12b359448ed73f46ce8f6d5a6b611b974
adding main
maxSeq.c:1:1: error: unknown type name ‘size_t’
 size_t maxSeq(int * a, size_t n) {
 ^~~~~~
maxSeq.c:1:24: error: unknown type name ‘size_t’
 size_t maxSeq(int * a, size_t n) {
                        ^~~~~~

[31mError: failed to compile your code[0m
[31mCannot continue testing[0m
Overall Grade: F
